Estilo básico e da barra de navegação; h1 básico para teste;

--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
       <li>Linguagens <i class="fas fa-angle-down"></i>
         <ul>
           <li><a href="#">Java</a> <span>5 Artigos</span></li>
-          <li><a href="#">Javascript</a><span>10 Artigos</span></li>
-          <li><a href="#">SQL</a><span>3 Artigos</span></li>
+          <li><a href="#">Javascript</a> <span>10 Artigos</span></li>
+          <li><a href="#">SQL</a> <span>3 Artigos</span></li>
         </ul>
       </li>
       <li><a href="#">Contato</a></li>
     </ul>
   </nav>
+  <header id="principal">
+    <h1>Meu site aqui</h1>
+  </header>
 </body>
 
 </html>
